// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator dbml {
  provider            = "prisma-dbml-generator"
  outputName          = "punto4.dbml"
  projectName         = "punto 4 - sistema de cobro"
  projectDatabaseType = "PostgreSQL"
  //https://dbdiagram.io/d
}

datasource db {
  provider = "postgresql"
  url      = "postgresql://postgres:postgres@lab.vitico.space:31132/ingsoft?schema=punto4"
}

model Persona {
  idPersona Int       @id @default(autoincrement())
  nombre    String
  apellido  String
  sexo      String
  Usuario   Usuario[]
}

model Usuario {
  estado Boolean

  idPersona    Int  @id
  idTipo       Int?
  grupoIdGrupo Int?

  persona Persona @relation(fields: [idPersona], references: [idPersona])

  tipoUsuario    tipoUsuario?     @relation(fields: [idTipo], references: [idTipoUsuario])
  PermisoUsuario PermisoUsuario[]
  Grupo          Grupo?           @relation(fields: [grupoIdGrupo], references: [idGrupo])
}

model tipoUsuario {
  idTipoUsuario Int       @id @default(autoincrement())
  nombre        String
  Usuario       Usuario[]
}

model Permiso {
  idPermiso             Int                     @id @default(autoincrement())
  nombre                String
  PermisoUsuario        PermisoUsuario[]
  PermisoGroup          PermisoGroup[]
  MenuPermisosRequerido MenuPermisosRequerido[]


}

model PermisoUsuario {
  permiso   Permiso @relation(fields: [idPermiso], references: [idPermiso])
  usuario   Usuario @relation(fields: [idUsuario], references: [idPersona])
  idPermiso Int
  idUsuario Int

  @@id([idPermiso, idUsuario])
}

model Menu {
  idMenu                Int                     @id @default(autoincrement())
  nombre                String
  menus                 Menu[]                  @relation("menu_parent")
  Menu                  Menu?                   @relation("menu_parent", fields: [idPadre], references: [idMenu])
  idPadre               Int?
  MenuPermisosRequerido MenuPermisosRequerido[]
}

model MenuPermisosRequerido {
  menu      Menu    @relation(fields: [idMenu], references: [idMenu])
  permiso   Permiso @relation(fields: [idPermiso], references: [idPermiso])
  idMenu    Int
  idPermiso Int

  @@id([idMenu, idPermiso])
}

model Grupo {
  idGrupo      Int            @id @default(autoincrement())
  nombre       String
  Usuario      Usuario[]
  PermisoGroup PermisoGroup[]
}

model PermisoGroup {
  idPermisoGroup   Int     @id @default(autoincrement())
  permiso          Permiso @relation(fields: [permisoIdPermiso], references: [idPermiso])
  grupo            Grupo   @relation(fields: [grupoIdGrupo], references: [idGrupo])
  permisoIdPermiso Int
  grupoIdGrupo     Int
}
