//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "punto 4 - sistema de cobro" {
  database_type: 'PostgreSQL'
  Note: ''
}

Table Persona {
  idPersona Int [pk, increment]
  nombre String [not null]
  apellido String [not null]
  sexo String [not null]
  Usuario Usuario [not null]
}

Table Usuario {
  estado Boolean [not null]
  idPersona Int [pk]
  idTipo Int
  grupoIdGrupo Int
  persona Persona [not null]
  tipoUsuario tipoUsuario
  PermisoUsuario PermisoUsuario [not null]
  Grupo Grupo
}

Table tipoUsuario {
  idTipoUsuario Int [pk, increment]
  nombre String [not null]
  Usuario Usuario [not null]
}

Table Permiso {
  idPermiso Int [pk, increment]
  nombre String [not null]
  PermisoUsuario PermisoUsuario [not null]
  PermisoGroup PermisoGroup [not null]
  MenuPermisosRequerido MenuPermisosRequerido [not null]
}

Table PermisoUsuario {
  permiso Permiso [not null]
  usuario Usuario [not null]
  idPermiso Int [not null]
  idUsuario Int [not null]

  indexes {
    (idPermiso, idUsuario) [pk]
  }
}

Table Menu {
  idMenu Int [pk, increment]
  nombre String [not null]
  menus Menu [not null]
  Menu Menu
  idPadre Int
  MenuPermisosRequerido MenuPermisosRequerido [not null]
}

Table MenuPermisosRequerido {
  menu Menu [not null]
  permiso Permiso [not null]
  idMenu Int [not null]
  idPermiso Int [not null]

  indexes {
    (idMenu, idPermiso) [pk]
  }
}

Table Grupo {
  idGrupo Int [pk, increment]
  nombre String [not null]
  Usuario Usuario [not null]
  PermisoGroup PermisoGroup [not null]
}

Table PermisoGroup {
  idPermisoGroup Int [pk, increment]
  permiso Permiso [not null]
  grupo Grupo [not null]
  permisoIdPermiso Int [not null]
  grupoIdGrupo Int [not null]
}

Ref: Usuario.idPersona > Persona.idPersona

Ref: Usuario.idTipo > tipoUsuario.idTipoUsuario

Ref: Usuario.grupoIdGrupo > Grupo.idGrupo

Ref: PermisoUsuario.idPermiso > Permiso.idPermiso

Ref: PermisoUsuario.idUsuario > Usuario.idPersona

Ref: Menu.idPadre > Menu.idMenu

Ref: MenuPermisosRequerido.idMenu > Menu.idMenu

Ref: MenuPermisosRequerido.idPermiso > Permiso.idPermiso

Ref: PermisoGroup.permisoIdPermiso > Permiso.idPermiso

Ref: PermisoGroup.grupoIdGrupo > Grupo.idGrupo